feat(auth): finished basic auth api
